# smart_copy

./: .gitignore  README.md  pyproject.toml
smart_copy/: Makefile  __init__.py  console.py  helpful.py  main.py  sm.py  smart_copy.py
smart_copy/test/: test_console.py
smart_copy/test/conf/: copyconf.yaml
