[tool.poetry]
name = "smart_copy"
version = "0.1.0"
description = ""
authors = ["Ivanov Ivan <inanov-ivan@rambler.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
loguru = "^0.6.0"
mg-file = "^0.1.3"
typing-extensions = "^4.0.1"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
